[gd_scene load_steps=6 format=2]

[ext_resource path="res://render/render.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/client.tscn" type="PackedScene" id=2]
[ext_resource path="res://game.gd" type="Script" id=3]
[ext_resource path="res://art/default/chatbox.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 256 )
expand_margin_top = 19.0

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Render" parent="." instance=ExtResource( 1 )]

[node name="MessagesToggler" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
toggle_mode = true
text = "Messages"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_top = 56.0
margin_right = 400.0
margin_bottom = 346.0
custom_styles/panel = SubResource( 1 )
custom_colors/title_color = Color( 0.709804, 0.709804, 0.709804, 1 )
window_title = "ALPACASclient Messages"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Client" parent="Messages" instance=ExtResource( 2 )]

[connection signal="send_command" from="Render" to="Messages/Client" method="_on_Render_send_command"]
[connection signal="toggled" from="MessagesToggler" to="." method="_on_MessagesToggler_toggled"]
[connection signal="popup_hide" from="Messages" to="." method="_on_popup_hide"]
[connection signal="logged_in" from="Messages/Client" to="Render" method="_on_Client_logged_in"]
[connection signal="render" from="Messages/Client" to="Render" method="_on_Client_render"]
[connection signal="text_msg" from="Messages/Client" to="Render" method="_on_Client_text_msg"]
